--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "multer": "^2.0.0",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "svix": "^1.66.0"
   },
