--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^2.0.0",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
+    "stripe": "^18.2.1",
     "svix": "^1.66.0"
   },
   "devDependencies": {
